; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_glock.c_demote_ok.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_glock.c_demote_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gfs2_glock = type { i64, i32, %struct.gfs2_glock_operations* }
%struct.gfs2_glock_operations = type { i32 (%struct.gfs2_glock.0*)* }
%struct.gfs2_glock.0 = type opaque

@LM_ST_UNLOCKED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gfs2_glock*)* @demote_ok to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @demote_ok(%struct.gfs2_glock* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gfs2_glock*, align 8
  %4 = alloca %struct.gfs2_glock_operations*, align 8
  store %struct.gfs2_glock* %0, %struct.gfs2_glock** %3, align 8
  %5 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %6 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %5, i32 0, i32 2
  %7 = load %struct.gfs2_glock_operations*, %struct.gfs2_glock_operations** %6, align 8
  store %struct.gfs2_glock_operations* %7, %struct.gfs2_glock_operations** %4, align 8
  %8 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %9 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @LM_ST_UNLOCKED, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %33

14:                                               ; preds = %1
  %15 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %16 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %15, i32 0, i32 1
  %17 = call i32 @list_empty(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %33

20:                                               ; preds = %14
  %21 = load %struct.gfs2_glock_operations*, %struct.gfs2_glock_operations** %4, align 8
  %22 = getelementptr inbounds %struct.gfs2_glock_operations, %struct.gfs2_glock_operations* %21, i32 0, i32 0
  %23 = load i32 (%struct.gfs2_glock.0*)*, i32 (%struct.gfs2_glock.0*)** %22, align 8
  %24 = icmp ne i32 (%struct.gfs2_glock.0*)* %23, null
  br i1 %24, label %25, label %32

25:                                               ; preds = %20
  %26 = load %struct.gfs2_glock_operations*, %struct.gfs2_glock_operations** %4, align 8
  %27 = getelementptr inbounds %struct.gfs2_glock_operations, %struct.gfs2_glock_operations* %26, i32 0, i32 0
  %28 = load i32 (%struct.gfs2_glock.0*)*, i32 (%struct.gfs2_glock.0*)** %27, align 8
  %29 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %30 = bitcast %struct.gfs2_glock* %29 to %struct.gfs2_glock.0*
  %31 = call i32 %28(%struct.gfs2_glock.0* %30)
  store i32 %31, i32* %2, align 4
  br label %33

32:                                               ; preds = %20
  store i32 1, i32* %2, align 4
  br label %33

33:                                               ; preds = %32, %25, %19, %13
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i32 @list_empty(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
